Spring/src/main/kotlin/com/example/spring/domain/base/error/BaseCode.kt
package com.example.spring.domain.base.error

interface BaseCode {
    fun getReason() : ReasonDto

    fun getReasonHttpStatus() : ReasonDto
}